--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,31 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+
+@layer components {
+  .infoText {
+    @apply p-4 bg-gray-700/50 rounded-lg max-w-[300px] mb-3;
+  }
+  .chatRow {
+    @apply rounded-lg px-5 py-3 text-sm flex items;
+  }
+}
+
+.message {
+  margin: 10px;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.user {
+  padding: 10px 20px;
+  background-color: lightblue;
+  text-align: right;
+}
+
+.system {
+  padding: 10px 20px;
+  background-color: lightgreen;
+  text-align: left;
 }
